--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
     "prisma": "^5.15.0"
   }
 }
